--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
 body{
     font-family: 'Poppins', sans-serif;
+    width: 100%;
+    margin: 0;
+    padding: 0;
 }
 /* Header Styling starts Here */
 
@@ -108,7 +111,7 @@ body{
         align-items: center;
         text-align: center;
         margin-top: 30px;
-        height: 200px;
+        height: 250px;
         width: 100%;
     }
 
@@ -165,15 +168,16 @@ body{
         width: 100%;
     }
 
+    .about-con .about{
+        margin-left: 20px;
+
+    }
+
     .about img{
         max-width: 280px;
         max-height: 300px;
-        /* margin-left: auto; */
     }
 
-    .about-con .card-body{
-        /* margin-left: auto; */
-    }
 }
 
 .about h5{
@@ -336,12 +340,21 @@ body{
     background-color: #edf2f2;
 }
 
+@media only screen and (max-width: 600px) {
+    courses{
+        margin-top: 50px;
+    }
+}
+
 /* Sign-Up Styling */
 
 .sign-up{
     background: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.3)), url(../images/registration.jpg);
     background-size: 100% 100%;
     height: 600px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .sign-up h5{
@@ -396,7 +409,56 @@ body{
     border-radius: 200px;
 }
 
+@media only screen and (max-width: 600px) {
+    .sign-up{
+        background-size: 100% 100%;
+        height: 570px;
+        margin-top: 60px;
+    }
+
+    .sign-up .sign-up-col1{
+        text-align: center;
+    }
+    
+    .sign-up h5{
+        font-size: 10px;
+    }
+    
+    .sign-up h1{
+        font-size: 20px;
+    }
+    
+    .sign-up p{
+        font-size: 10px;
+    }
+    
+    
+    .sign-up .sign-up-col2 .form-label{
+        font-size: 12px;
+        padding: 7px 0px;
+    
+    }
+
+    .sign-up .sign-up-col2 .form-bottom{
+        padding: 15px 0px;
+    
+    }
+    
+   
+}
+
 /* Teachers Styling */
+
+.teachers .card{
+    width: 16rem;
+}
+
+@media only screen and (max-width: 600px) {
+    .teachers .card{
+        width: 22rem;
+        margin-top: 20px;
+    }
+}
 
 .teachers h5{
     color: goldenrod;
@@ -437,6 +499,13 @@ body{
     font-size: 20px;
    color: #8c518c;
 
+}
+
+@media only screen and (max-width: 600px) {
+    .testimonial .review h4{
+        font-size: 20px;
+    
+    }
 }
 
 .testimonial span{
@@ -517,23 +586,28 @@ body{
     font-weight: 700;
 }
 
+@media only screen and (max-width: 600px) {
+    .blog .blog1, .blog2, .blog3{
+        margin-bottom: 15px;
+    }
+}
+
 /* blog style end here  */
 
 /* Footer Stylings */
 
 .footer{
     background-color: #784278;
-    height: 635px;
+    height: 470px;
 }
 
 .footer1{
-    height: 555px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.footer1 .about-ait{
+.footer1{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -559,11 +633,15 @@ body{
 
 }
 
-.footer1 .about-ait p{
+.footer1 p{
     color: white;
     font-size: 14px;
     display: inline;
     font-weight: 500;
+}
+
+.footer1 .news{
+    margin-bottom: 3rem;
 }
 
 /* Footer 2 styling */
@@ -585,6 +663,22 @@ body{
 
 .news form .btn{
     background-color: green;
+}
+
+@media only screen and (max-width: 600px) {
+
+    .footer{
+        height: 1040px;
+    }
+
+    .footer2{
+        font-size: 10px;
+    }
+    
+    #footer-signup{
+        margin-top: 5px;
+        margin-left: 140px;
+    }
 }
 
 /* footer 2 styling ends  */
