--- a/css/style.css
+++ b/css/style.css
@@ -963,7 +963,8 @@ body{
 @media only screen and (max-width: 600px) {
 
     .footer{
-        height: 1150px;
+        height: 1200px;
+        margin-top: 100px;
     }
 
     .footer .courses{
