--- a/css/style.css
+++ b/css/style.css
@@ -963,7 +963,7 @@ body{
 @media only screen and (max-width: 600px) {
 
     .footer{
-        height: 1200px;
+        height: auto;
         margin-top: 100px;
     }
 
